fix: Request - fix horizontal overflow b'coz timeline

--- a/client/src/pages/scss/index.scss
+++ b/client/src/pages/scss/index.scss
@@ -1,6 +1,7 @@
 .home {
   min-height: 100vh;
   width: 100%;
+  overflow-x: hidden;
 
   .header {
     height: 100vh;
